--- a/style.css
+++ b/style.css
@@ -2,15 +2,66 @@
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
+html {
+    scroll-behavior: smooth;
+    background:#000000 
 }
 
-body {
-    background:#000000;
+.container {
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.header-container {
+    background: url('./assets/img/bg.png');
+    background-repeat: no-repeat;
+    background-position: center 0;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: auto;
+    list-style: none;
+}
+
+.nav-link {
+    padding: 0 10px;
+    line-height: 40px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 .logo {
-    
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: auto;
+    list-style: none;
 }
+
+.hero {
+    display: flex;
+    background-image: url('./assets/img/bg.png');
+    background-position: center -90px;
+    background-repeat: no-repeat;
+}
+
+.skills {}
+
+.portfolio {}
+
+.video {}
+
+.price {}
+
+.contacts {}
+
+.footer-container {}
