--- a/style.css
+++ b/style.css
@@ -111,14 +111,27 @@ body {
 
 .skills {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: center;
+    width: 1440px;
+    height: 482px;
 }
 
 .section-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    height: 80px;
+    background: #000000;
+    color: #BDAE82;
+}
+
+.text-title {
     flex: ;
-    width: 112px;
+    width: 152px;
     height: 80px;
     background: #000000;
     border-radius: 0px;
@@ -131,52 +144,134 @@ body {
     color: #BDAE82;
 }
 
-.skills-item {
-    flex: ;
+.items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+    width: 1400px;
+    height: 242px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 36px;
-    color:#FFFFFF
+    background: #000000;
+    color: #FFFFFF;
+}
+.skill-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 320px;
+    height: 240px;
 }
 
-.skills-item-2 {
+.icon-skills {
     flex: ;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 36px;
-    color:#FFFFFF
 }
 
-.skills-item-3 {
+.header-skills {
     flex: ;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 36px;
-    color:#FFFFFF
+    width: 280px;
+    height: 40px;
+    text-align: center;
 }
 
-.skills-item-4 {
+.description-skills {
     flex: ;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 36px;
-    color:#FFFFFF
+    width: 280px;
+    height: 72px;
+    text-align: center;
 }
-.portfolio {}
 
+.portfolio {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 1440px;
+    height: 1500px;
+}
+
+
+.text-title-2 {
+    flex: ;
+    width: 232px;
+    height: 80px;
+    background: #000000;
+    border-radius: 0px;
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 80px;
+    text-align: center;
+    color: #BDAE82;
+}
+
+.portfolio-buttons {
+    flex: ;
+    width: 895px;
+    height: 55px;
+}
+
+.exemples-photo {
+    flex: ;
+    width: 1400px;
+    height: 1145px;
+}
 .video {}
+
+.text-title-3 {
+    flex: ;
+    width: 154px;
+    height: 80px;
+    background: #000000;
+    border-radius: 0px;
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 80px;
+    text-align: center;
+    color: #BDAE82;
+}
 
 .price {}
 
+.text-title-4 {
+    flex: ;
+    width: 142px;
+    height: 80px;
+    background: #000000;
+    border-radius: 0px;
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 80px;
+    text-align: center;
+    color: #BDAE82;
+}
+
 .contacts {}
+
+.text-title-5 {
+    flex: ;
+    width: 450px;
+    height: 80px;
+    background: #000000;
+    border-radius: 0px;
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 80px;
+    text-align: center;
+    color: #BDAE82;
+}
 
 .footer-container {
     flex: ;
