--- a/style.css
+++ b/style.css
@@ -18,13 +18,23 @@ body {
     flex-direction: column;
     width: 1440px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0px;
 }
 
 .header-container {
     background: url('./assets/img/bg.png');
     background-repeat: no-repeat;
     background-position: center 0;
+}
+.header-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 1440px;
+    height: 90px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 .nav-list {
@@ -38,6 +48,7 @@ body {
 .nav-link {
     padding: 0 10px;
     line-height: 40px;
+    transition: .3s;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -47,24 +58,78 @@ body {
     color: #FFFFFF;
 }
 
+.nav-link:hover {
+    color:#BDAE82;
+}
+
 .logo {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin-right: auto;
     list-style: none;
+    background-size: contain;
+    background-repeat: no-repeat;  
+    transition: 0.3s;
 }
+
+.logo:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+      contrast(87%);
+}
+.language {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 70px;
+    height: 50px;
+    background: url('./assets/img/bg.png');
+    border: 0;
+}
+
+.en {
+    width: 25px;
+    height: 50px;
+    border: 0;
+    background: url('./assets/img/bg.png');
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 50px;
+    text-align: center;
+    color: #BDAE82;
+}
+
+.ru {
+    width: 22px;
+    height: 50px;
+    border: 0;
+    background: url('./assets/img/bg.png');
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 50px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+
 
 .hero {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
     background-image: url('./assets/img/bg.png');
     background-position: center -90px;
     background-repeat: no-repeat;
     width: 1440px;
-    height: 820px;
+    height: 910px;
+    padding-top: 160px;
+    padding-bottom: 330px;
+    padding-right: 80px;
+    padding-left: 80px;
 }
 
 .container-hero {
@@ -127,6 +192,7 @@ body {
     height: 80px;
     background: #000000;
     color: #BDAE82;
+    background-image: linear-gradient(to top, #000 39px, #bdae82 39px, #bdae82 41px, #000 41px);
 }
 
 .text-title {
@@ -226,8 +292,8 @@ body {
     font-size: 20px;
     line-height: 40px;
     text-align: center;
-    color: #BDAE82;
-    background-color: black;
+    color: black;
+    background-color: #BDAE82;
     border: 2px solid #BDAE82;
     box-sizing: border-box;
     border-radius: 0px;
@@ -316,19 +382,19 @@ body {
 }
 
 .video-player {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 1400px;
     height: 705px;
 }
 
-/*.video-button {
-    flex:auto;
+.video-button {
+    position: absolute;
     width: 130px;
     height: 130px;
-}*/
+}
 .price {
     display: flex;
     flex-direction: column;
@@ -364,7 +430,7 @@ body {
 .cards {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     width: 450px;
     height: 505px;
@@ -404,7 +470,7 @@ body {
 .description-tarif {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 364px;
     height: 180px;
