--- a/style.css
+++ b/style.css
@@ -516,6 +516,18 @@ body {
     width: 1440px;
     height: 700px;
     background-image: url(./assets/img/contacts.jpg);
+    background-size: auto 700px;
+    background-position: center center;
+}
+
+.section-title-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    width: 450px;
+    height: 80px;
+    color: #BDAE82;
 }
 
 .text-title-5 {
@@ -527,21 +539,189 @@ body {
     font-weight: bold;
     font-size: 40px;
     line-height: 80px;
-    text-align: center;
+    text-align: left;
     color: #BDAE82;
 }
 
-.footer-container {
+.place-response {
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
-    align-items:baseline;
-    width: 1440px;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 450px;
+    height: 445px;
+    margin-right: 20px;
+}
+
+.email {
+    width: 450px;
+    height: 50px;
+    border: 2px solid #BDAE82;
+    box-sizing: border-box;
+    border-radius: 0px;
+    background-image: url(./assets/img/contacts.jpg);
+    background: rgba(0, 0, 0, 0.5);
+    background-size: auto 700px;
+}
+
+.phone {
+    width: 450px;
+    height: 50px;
+    border: 2px solid #BDAE82;
+    box-sizing: border-box;
+    border-radius: 0px;
+    background-image: url(./assets/img/contacts.jpg);
+    background: rgba(0, 0, 0, 0.5);
+    background-size: auto 700px;
+}
+
+.message {
+    width: 450px;
+    height: 100px;
+    border: 2px solid #BDAE82;
+    box-sizing: border-box;
+    border-radius: 0px;
+    background-image: url(./assets/img/contacts.jpg);
+    background: rgba(0, 0, 0, 0.5);
+    background-size: auto 700px;
+}
+
+.response-button {
+    width: 220px;
+    height: 55px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 40px;
+    text-align: center;
+    color: #000000;
+    background: #BDAE82;
+    border-radius: 0px;
+}
+
+::placeholder {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 40px;
+    color: #bdae82;
+  }
+
+  textarea {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 40px;
+    color: #bdae82;
+    resize: none
+  }
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     height: 150px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 36px;
-    color:#FFFFFF
+    color:#FFFFFF;
+    background-color: black;
+}
+
+.footer-data {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 1440px;
+    height: 150px;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.github {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 182px;
+    height: 50px;
+    
+}
+
+.github a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.github a:visited {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.github a:hover {
+    text-decoration: none;
+    color:#bdae82;
+}
+
+.github a:visited:hover {
+    text-decoration: none;
+    color:#bdae82;
+}
+
+.rolling-s {
+    width: 211px;
+    height: 50px;
+}
+
+.rolling-s a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.rolling-s a:visited {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.rolling-s a:hover {
+    text-decoration: none;
+    color:#bdae82;
+}
+
+.rolling-s a:visited:hover {
+    text-decoration: none;
+    color:#bdae82;
+}
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 188px;
+    height: 50px; 
+}
+
+.inst:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+      contrast(87%);
+}
+
+.fb:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+      contrast(87%);
+}
+
+.tw:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+      contrast(87%);
+}
+
+.pin:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+      contrast(87%);
 }
